>       * find_link() now lets you pass n=>"all" to get back a list >         of all links that match the other criteria. >       * find_link() and follow_link() now complain if you pass >         invalid parms to them.

--- a/t/find_link.html
+++ b/t/find_link.html
@@ -3,10 +3,10 @@
     </head>
     <body>
 	<A HREF="http://cnn.com/">CNN</A>
-	<A HREF="http://a.cpan.org/">CPAN</A>
-	<A HREF="http://b.cpan.org/">CPAN</A>
-	<A HREF="http://c.cpan.org/">CPAN</A>
-	<A HREF="http://d.cpan.org/">CPAN</A>
+	<A HREF="http://a.cpan.org/">CPAN A</A>
+	<A HREF="http://b.cpan.org/">CPAN B</A>
+	<A HREF="http://c.cpan.org/" NAME="bongo">CPAN C</A>
+	<A HREF="http://d.cpan.org/">CPAN D</A>
     </body>
 </html>
 
