Wrote tests for combinatorial link finding

--- a/t/find_link.html
+++ b/t/find_link.html
@@ -2,11 +2,18 @@
     <head>
     </head>
     <body>
-	<A HREF="http://cnn.com/">CNN</A>
+	<A HREF="http://blargle.com/">blargle</A>
 	<A HREF="http://a.cpan.org/">CPAN A</A>
 	<A HREF="http://b.cpan.org/">CPAN B</A>
 	<A HREF="http://c.cpan.org/" NAME="bongo">CPAN C</A>
 	<A HREF="http://d.cpan.org/">CPAN D</A>
+
+	<A HREF="http://www.msnbc.com/">MSNBC</A>
+	<A HREF="http://www.cnn.com/">CNN</A>
+	<A HREF="http://www.bbc.co.uk/">BBC</A>
+	<A HREF="http://www.msnbc.com/">News</A>
+	<A HREF="http://www.cnn.com/">News</A>
+	<A HREF="http://www.bbc.co.uk/">News</A>
     </body>
 </html>
 
