--- a/t/find_link.html
+++ b/t/find_link.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+	<TITLE>Testing the links</TITLE>
     </head>
     <body>
 	<A HREF="http://blargle.com/">blargle</A>
@@ -12,8 +13,15 @@
 	<A HREF="http://www.cnn.com/">CNN</A>
 	<A HREF="http://www.bbc.co.uk/">BBC</A>
 	<A HREF="http://www.msnbc.com/">News</A>
-	<A HREF="http://www.cnn.com/">News</A>
+	<A HREF="http://www.cnn.com/" NAME="Fred">News</A>
 	<A HREF="http://www.bbc.co.uk/">News</A>
+
+	<MAP NAME="SOME_MAP">
+	    <AREA HREF="http://www.msnbc.com/a" COORDS="1,2,3,4">
+	    <AREA HREF="http://www.cnn.com/b" COORDS="5,6,7,8">
+	    <AREA HREF="http://www.cpan.org/c" COORDS="10,11,12,13">
+	</MAP>
+	<IMG SRC="SOME_IMAGE" USEMAP="#SOME_MAP">
     </body>
 </html>
 
