--- a/t/find_link.html
+++ b/t/find_link.html
@@ -17,9 +17,9 @@
 	<A HREF="http://www.bbc.co.uk/">News</A>
 
 	<MAP NAME="SOME_MAP">
-	    <AREA HREF="http://www.msnbc.com/a" COORDS="1,2,3,4">
-	    <AREA HREF="http://www.cnn.com/b" COORDS="5,6,7,8">
-	    <AREA HREF="http://www.cpan.org/c" COORDS="10,11,12,13">
+	    <AREA HREF="http://www.msnbc.com/area" COORDS="1,2,3,4"></AREA>
+	    <AREA HREF="http://www.cnn.com/area" COORDS="5,6,7,8"></AREA>
+	    <AREA HREF="http://www.cpan.org/area" COORDS="10,11,12,13"></AREA>
 	</MAP>
 	<IMG SRC="SOME_IMAGE" USEMAP="#SOME_MAP">
     </body>
