--- a/t/find_link.html
+++ b/t/find_link.html
@@ -18,8 +18,8 @@
 
 	<MAP NAME="SOME_MAP">
 	    <AREA HREF="http://www.msnbc.com/area" COORDS="1,2,3,4"></AREA>
-	    <AREA HREF="http://www.cnn.com/area" COORDS="5,6,7,8"></AREA>
-	    <AREA HREF="http://www.cpan.org/area" COORDS="10,11,12,13"></AREA>
+	    <AREA HREF="http://www.cnn.com/area" COORDS="5,6,7,8">
+	    <AREA HREF="http://www.cpan.org/area" COORDS="10,11,12,13" />
 	</MAP>
 	<IMG SRC="SOME_IMAGE" USEMAP="#SOME_MAP">
     </body>
