Added the onClick="window.open(" functionality

--- a/t/find_link.html
+++ b/t/find_link.html
@@ -18,6 +18,7 @@
 	<A HREF="http://www.msnbc.com/">News</A>
 	<A HREF="http://www.cnn.com/" NAME="Fred">News</A>
 	<A HREF="http://www.bbc.co.uk/">News</A>
+	<A onmouseover="window.status='Rebuild Files'; return true" href="#" onClick="window.open(  '/cgi-bin/MT/mt.cgi', 'rebuild', 'width=400,height=200,resizable=yes')">Rebuild Index</A>
 
 	<MAP NAME="SOME_MAP">
 	    <AREA HREF="http://www.msnbc.com/area" COORDS="1,2,3,4"></AREA>
