>       * New warnings in find_link() for strings that are space padded, >         and for text matches that are passed a regex.  Thanks to >         Jim Cromie.

--- a/t/find_link.html
+++ b/t/find_link.html
@@ -26,6 +26,10 @@
 	    <AREA HREF="http://www.cpan.org/area" COORDS="10,11,12,13" />
 	</MAP>
 	<IMG SRC="SOME_IMAGE" USEMAP="#SOME_MAP">
+
+	<!-- new stuff -->
+	<A HREF="http://nowhere.org/" Name="Here">NoWhere</A>
+	<A HREF="http://nowhere.org/padded" Name=" Here "> NoWhere </A>
     </body>
 </html>
 
