--- a/t/field.html
+++ b/t/field.html
@@ -7,6 +7,7 @@
 <INPUT TYPE="text" NAME="dingo" VALUE="dingo1">
 <INPUT TYPE="text" NAME="bongo" VALUE="bongo!">
 <INPUT TYPE="radio" NAME="wango" VALUE="wango!">
+<INPUT TYPE="radio" NAME="wango" VALUE="wongo!">
 <INPUT TYPE="text" NAME="dingo" VALUE="dingo2">
 </FORM>
 </BODY>
