--- a/t/find_link.html
+++ b/t/find_link.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta http-equiv="Refresh" content="0; url=http://www.drphil.com">
 	<TITLE>Testing the links</TITLE>
     </head>
     <body>
