Fails to find an image inside a link.  See RT #11290.

--- a/t/image-parse.html
+++ b/t/image-parse.html
@@ -10,6 +10,7 @@
             <A HREF="http://www.cnn.com/">CNN</A>
             <INPUT NAME="boobala" TYPE="TEXT">
             <INPUT TYPE="submit" SRC="bongo.gif" HEIGHT=142 WIDTH=43>
+            <a href="link.htm"><img src="linked.gif"></a>
         </FORM>
         <A HREF="http://www.bbc.co.uk/" NAME="Wilma">BBC</A>
         <A HREF="blongo.html">Blongo!</A>
