--- a/t/form_with_fields.html
+++ b/t/form_with_fields.html
@@ -8,7 +8,7 @@
 </form>
 
 <form action="http://localhost/" method="post" name="2nd_form">
-    <input type="text" name="2a"  />
+    <input type="text" name="opt[2]"  /> Like in PHP!
     <input type="text" name="1b"  />
     <input type="Submit" name="submit" value="Submit" label="Sumbit" />
 </form>
