--- a/t/find_link.html
+++ b/t/find_link.html
@@ -2,7 +2,7 @@
     <head>
         <meta http_equiv="Refresh" content="0; url=http://www.incorrect.com">
         <meta http-equiv="Rfresh" content="0; url=http://www.also-wrong.com">
-        <meta http-equiv="Refresh" content="0; url=http://www.drphil.com/">
+        <meta http-equiv="Refresh" content="0; url='http://www.drphil.com/'">
         <META HTTP-EQUIV="REFRESH" CONTENT="0; URL=HTTP://WWW.UPCASE.COM/">
         <TITLE>Testing the links</TITLE>
     </head>
