added checks for text=>//

--- a/t/find_inputs.html
+++ b/t/find_inputs.html
@@ -14,5 +14,13 @@
     <input type="SubMit" name="submit" value="Submit" label="Sumbit" />
 </form>
 
+<form action="http://localhost/" method="post" name="3rd_form">
+    <input type="text" name="YourMom" />
+    <input type="text" name="YourDad" />
+    <input type="text" name="YourSister" />
+    <input type="text" name="YourSister" />
+    <input type="SubMit" name="submit" value="Submit" label="Sumbit" />
+</form>
+
 </body>
 </html>
