Parse url (href attribute) for window.open in addition to the onclick attribute
allow for white space in regex and append test

--- a/t/find_link.html
+++ b/t/find_link.html
@@ -36,6 +36,7 @@
         <A HREF="http://nowhere.org/" Name="Here">NoWhere</A>
         <A HREF="http://nowhere.org/padded" Name=" Here "> NoWhere </A>
         <A HREF="blongo.html">Blongo!</A>
+        <A HREF="javascript: window.open( 'http://www.yahoo.com/', 'new', 'width=400,height=200,resizable=yes');" onClick="return confirm('Are your sure?');">Click Here</A>
     </body>
 </html>
 
