extract image links also from css

--- a/t/image-parse.html
+++ b/t/image-parse.html
@@ -1,6 +1,10 @@
 <html>
     <head>
         <TITLE>Testing image extraction</TITLE>
+        <style>
+            background-color:white;
+            background-image:url(/Images/bg-gradient.png);
+        </style>
     </head>
     <body>
         <A HREF="http://blargle.com/">blargle</A>
@@ -14,6 +18,7 @@
         </FORM>
         <A HREF="http://www.bbc.co.uk/" NAME="Wilma">BBC</A>
         <A HREF="blongo.html">Blongo!</A><img src="hacktober.jpg" id="first-hacktober-image" class="my-class-1"><img src="hacktober.jpg" class="my-class-2 foo"><img src="hacktober.jpg" class="my-class-3 foo bar"><img src="http://example.org/abs.tif" id="absolute"><img data-image="hacktober.jpg" id="no-src-regression-269">
+        <div style="background:url(images/logo.png) no-repeat;background-size:275px 95px;" id="logo">Logo</div>
     </body>
 </html>
 
