--- a/t/form_with_fields.html
+++ b/t/form_with_fields.html
@@ -13,4 +13,13 @@
     <input type="Submit" name="submit" value="Submit" label="Sumbit" />
 </form>
 
+<form action="http://localhost/" method="post" name="3rd_form">
+    <select name="select">
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+    </select>
+    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+</form>
+
 </body>
