Allow refs-to-ints to select Nth option in forms
Incidentally replaced while/each with for/keys, because each is discouraged.

--- a/t/form_with_fields.html
+++ b/t/form_with_fields.html
@@ -48,4 +48,13 @@
     <input type="hidden" name="5e" value="value" />
 </form>
 
+<form action="http://localhost/" method="post" name="3rd_form">
+    <select name="select">
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+    </select>
+    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+</form>
+
 </body>
