Issue #242: add support for id and class in find_image()
This also reworks the unit tests around the image functionality. In this first rework step, tests for find_image() and find_all_images() were added. I believe some additional work on the overlapping test files is needed.

--- a/t/image-parse.html
+++ b/t/image-parse.html
@@ -13,7 +13,7 @@
             <a href="link.htm"><img src="linked.gif"></a>
         </FORM>
         <A HREF="http://www.bbc.co.uk/" NAME="Wilma">BBC</A>
-        <A HREF="blongo.html">Blongo!</A>
+        <A HREF="blongo.html">Blongo!</A><img src="hacktober.jpg" id="first-hacktober-image" class="my-class-1"><img src="hacktober.jpg" class="my-class-2 foo"><img src="hacktober.jpg" class="my-class-3 foo bar"><img src="http://example.org/abs.tif" id="absolute">
     </body>
 </html>
 
