--- a/t/form_with_fields_verbose.html
+++ b/t/form_with_fields_verbose.html
@@ -4,7 +4,7 @@
 <form action="http://localhost/" method="post" enctype="multipart/form-data" name="1st_form">
     <input type="foobar" name="1a" />
     <input type="text" name="1b" />
-    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+    <input type="Submit" name="submit" value="Submit" label="Submit" />
 </form>
 
 </body>
