--- a/t/tick.html
+++ b/t/tick.html
@@ -8,7 +8,7 @@
 <input type="checkbox" name="foo" value="wibble" /> Wibble<br />
 <input type="checkbox" name="foo" value="foo" /> Foo<br />
 
-<input type="Submit" name="submit" value="Submit" label="Sumbit" />
+<input type="Submit" name="submit" value="Submit" label="Submit" />
 </form>
 </body>
 
