--- a/t/form_with_fields.html
+++ b/t/form_with_fields.html
@@ -4,40 +4,40 @@
 <form action="http://localhost/" method="post" enctype="multipart/form-data" name="1st_form">
     <input type="text" name="1a"  />
     <input type="text" name="1b"  />
-    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+    <input type="Submit" name="submit" value="Submit" label="Submit" />
 </form>
 
 <form action="http://localhost/" method="post" name="2nd_form">
     <input type="text" name="opt[2]"  /> Like in PHP!
     <input type="text" name="1b"  />
-    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+    <input type="Submit" name="submit" value="Submit" label="Submit" />
 </form>
 
 <form action="http://localhost/" method="post" enctype="multipart/form-data" name="3rd_form_ambiguous">
     <input type="text" name="3a"  />
     <input type="text" name="3b"  />
-    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+    <input type="Submit" name="submit" value="Submit" label="Submit" />
 </form>
 
 <form action="http://localhost/" method="post" enctype="multipart/form-data" name="3rd_form_ambiguous">
     <input type="text" name="3c"  />
     <input type="text" name="3d"  />
     <input type="text" name="x"  />
-    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+    <input type="Submit" name="submit" value="Submit" label="Submit" />
 </form>
 
 <form action="http://localhost/" method="post" enctype="multipart/form-data" name="4th_form_1">
     <input type="text" name="4a"  />
     <input type="text" name="4b"  />
     <input type="text" name="x"  />
-    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+    <input type="Submit" name="submit" value="Submit" label="Submit" />
 </form>
 
 <form action="http://localhost/" method="post" enctype="multipart/form-data" name="4th_form_2">
     <input type="text" name="4a"  />
     <input type="text" name="4b"  />
     <input type="text" name="x"  />
-    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+    <input type="Submit" name="submit" value="Submit" label="Submit" />
 </form>
 
 </body>
