PR #12: add edge case tests for CSS images

--- a/t/image-parse.html
+++ b/t/image-parse.html
@@ -19,6 +19,7 @@
         <A HREF="http://www.bbc.co.uk/" NAME="Wilma">BBC</A>
         <A HREF="blongo.html">Blongo!</A><img src="hacktober.jpg" id="first-hacktober-image" class="my-class-1"><img src="hacktober.jpg" class="my-class-2 foo"><img src="hacktober.jpg" class="my-class-3 foo bar"><img src="http://example.org/abs.tif" id="absolute"><img data-image="hacktober.jpg" id="no-src-regression-269">
         <div style="background:url(images/logo.png) no-repeat;background-size:275px 95px;" id="logo">Logo</div>
+        <img src="inner.jpg" style="background-image: url(outer.jpg); padding: 5em" id="weird_background_style_edge_case">
     </body>
 </html>
 
