Don't make assumptions in tests about what's happening on port 80
Fixes #276

--- a/t/history_2.html
+++ b/t/history_2.html
@@ -6,7 +6,7 @@
       <form action="history_3.html" method="get" name="get_form">
           <input type="Submit" name="submit"/>
       </form>
-      <form action="http://localhost/" method="post" name="post_form">
+      <form action="" method="post" name="post_form">
           <input type="Submit" name="submit"/>
       </form>
     </body>
