find links with the rel attribute to get favicons

--- a/t/find_link.html
+++ b/t/find_link.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Refresh" content="0; url='http://www.drphil.com/'">
         <META HTTP-EQUIV="REFRESH" CONTENT="0; URL=HTTP://WWW.UPCASE.COM/">
         <link rel="stylesheet" type="text/css" href="styles.css" />
+        <link rel="icon" type="image/png" href="foo.png" />
         <TITLE>Testing the links</TITLE>
     </head>
     <body>
