Document that click_button dies if no button is found
Also add regression tests for #136 to prove that <button> tags indeed
work with our HTML::Form version now.

--- a/t/find_inputs.html
+++ b/t/find_inputs.html
@@ -4,7 +4,7 @@
 <form action="http://localhost/" method="post" enctype="multipart/form-data" name="1st_form">
     <input type="text" name="1a"  />
     <input type="IMAGE" name="submit1" value="Submit" label="Submit" />
-    <input type="submit" name="submit2" value="Submit" label="Submit" />
+    <button type="submit" name="submit2" value="Submit" label="Submit" />
 </form>
 
 <form action="http://localhost/" method="post" name="2nd_form">
