add tests for tick() with no value

--- a/t/tick.html
+++ b/t/tick.html
@@ -4,9 +4,12 @@
 
 <input type="checkbox" name="foo" value="hello" /> Hello<br />
 <input type="checkbox" name="foo" value="bye"   /> Bye<br />
-<input type="checkbox" name="foo" value="arse" /> Arse<br />
+<input type="checkbox" name="foo" value="parse" /> Parse<br />
 <input type="checkbox" name="foo" value="wibble" /> Wibble<br />
 <input type="checkbox" name="foo" value="foo" /> Foo<br />
+<label>
+    <input type="checkbox" name="no_value" /> I have no value
+</label>
 
 <input type="Submit" name="submit" value="Submit" label="Submit" />
 </form>
