add test for set_fields with upload and text

--- a/t/file_upload.html
+++ b/t/file_upload.html
@@ -1,4 +1,5 @@
 <form method="post" enctype="multipart/form-data">
   <input type="file" name="document">
+  <input type="text" name="another_field">
   <input type="submit">
 </form>
